# Secure-Cloud-Storage

./: .gitignore  Cargo.toml  README.md
.github/workflows/: CI.yml
client/: Cargo.toml
client/src/: config.rs  lib.rs  main.rs  ops.rs  repl.rs
server/: Cargo.toml
server/src/: config.rs  handlers.rs  lib.rs  main.rs  store.rs
shared/: Cargo.toml
shared/src/: constants.rs  crypto.rs  frame.rs  lib.rs  messages.rs
tests/: Cargo.toml
tests/src/: lib.rs
