[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
tokio = { version = "1", features = ["full"] }
bincode = { version = "2", features = ["serde"] }
rustls = { version = "0.23" }
tokio-rustls = { version = "0.26" }
ed25519-dalek = { version = "2", features = ["rand_core"] }
clap = { version = "4", features = ["derive"] }
rpassword = "7"
rand = "0.8"
aes-gcm = { version = "0.10", features = ["aes"] }