[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
rand = "0.8"
tokio = { version = "1", features = ["full"] }
rcgen = "0.13"
tokio-rustls = "0.26"
rustls = "0.23"
bincode = { version = "2", features = ["serde"] }
hex = "0.4.3"